🎨 style:🎨 Update code formatting and sort cSpell.words in settings.json ✨ feat:✨ Add 'shikix' to cSpell.words and update package references ✨ feat:✨ Introduce new 'Velocita' and 'Velocita2' icon components 🩹 fix:🩹 Replace 'i-carbon-campsite' with 'i-carbon-home' in TheFooter.vue 🎨 style:🎨 Reorder imports in main.ts for consistency ✨ feat:✨ Use 'Velocita' component in IndexPage 🎨 style:🎨 Update UnoCSS config with new color theme and button styles 🩹 fix:🩹 Switch to 'markdown-it-shikix' and update theme names in vite.config.ts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,13 @@
 {
   "cSpell.words": [
     "Ablegerprojekte",
-    "nyxb",
     "demi",
     "iconify",
     "intlify",
+    "nyxb",
     "pinia",
     "pnpm",
+    "shikix",
     "unocss",
     "unplugin",
     "velocita",
