--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "https-localhost": "^4.7.1",
     "lint-staged": "^15.1.0",
     "markdown-it-link-attributes": "^4.0.1",
-    "markdown-it-shikiji": "^0.6.13",
+    "markdown-it-shikix": "^0.0.3",
     "pnpm": "^8.11.0",
     "rollup": "^4.5.0",
-    "shikiji": "^0.6.13",
+    "shikix": "^0.0.3",
     "simple-git-hooks": "^2.9.0",
     "typescript": "^5.3.2",
     "unocss": "^0.57.6",
